# torchrec-lightning-example

./: .gitignore  README.md  pyproject.toml
config/: ml-100k.yaml
src/torchrec_lightning_example/: __main__.py  data.py  model.py
